# easyPresent

./: .gitignore  CMakeLists.txt  README.md  agent.md  eslint.config.mjs  improvements.md  index.html  package-lock.json  package.json  todo.md  vite.config.js
dist-electron/: main.js  preload.js
docs/: FUTURE_NDI.md
electron/: ipc.test.js  main.js  pptx-parser.js  preload.js  server.js  server.test.js
native/: binding.gyp
native/src/: addon.cc  audio_engine.cc  audio_engine.h  render_engine.cc  render_engine.h  text_renderer.cc  text_renderer.h  transition_engine.cc  transition_engine.h  video_decoder.cc  video_decoder.h
public/stage/: app.js  index.html
release/: EasyPresent Setup 1.0.0.exe.blockmap  builder-debug.yml  latest.yml
release/win-unpacked/resources/: app-update.yml
src/: main.js
src/components/: AudioBin.js  BiblePanel.js  Icons.js  ImportExport.js  LibraryPanel.js  MediaBin.js  PlaylistPanel.js  PreviewPanel.js  ShowControls.js  SlideEditor.js  SlideView.js  SongImporter.js  ThemeEditor.js  ToastManager.js  Toolbar.js  VirtualScroller.js  WelcomeModal.js
src/components/common/: Icons.js  ToastManager.js  VirtualScroller.js  WelcomeModal.js
src/data/: bible-esv.json  bible-niv.json
src/engine/: MediaManager.js  NativeRender.js  SearchWorker.js  SearchWorker.test.js  StateManager.js  StorageManager.js  TimerEngine.js
src/features/bible/: BiblePanel.js
src/models/: Presentation.js  Presentation.test.js  Slide.js  TextElement.js
src/output/: stage.html
src/styles/: components.css  global.css  layout.css  toolbar.css  variables.css
(+14 files in other folders)
